# seiscomp-xyztiles

./: .gitignore  CMakeLists.txt  README.md  plugin.cpp  xyztilestore.cpp  xyztilestore.h
seiscomp/etc/descriptions/: global_maptiles_community.xml  global_xyztiles.xml
